--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "clsx": "^1.2.1",
     "fabric": "6.0.0-beta9",
     "immer": "^10.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "0.105.0-alpha.4",
     "mitt": "^3.0.0",
+    "nanoid": "^4.0.2",
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
