--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reflect-metadata": "^0.1.13",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
+    "typedi": "^0.10.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
