--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "canvas": "^2.11.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "fabric": "6.0.0-beta9",
     "immer": "^10.0.2",
+    "jsdom": "^22.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "0.105.0-alpha.4",
     "mitt": "^3.0.0",
@@ -32,12 +34,11 @@
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "reflect-metadata": "^0.1.13",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
-    "typedi": "^0.10.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/lodash": "^4.14.195",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
