--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -30,7 +31,7 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "fabric": "6.0.0-beta9",
+    "fabric": "6.0.0-beta10",
     "immer": "^10.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "0.105.0-alpha.4",
