--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "fabric": "6.0.0-beta10",
     "immer": "^10.0.2",
     "lodash": "^4.17.21",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "0.256.0",
     "mitt": "^3.0.0",
     "nanoid": "^4.0.2",
     "next": "^13.4.6",
