--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "fabric": "6.0.0-beta10",
+    "filepond": "^4.30.4",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
     "immer": "^10.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "0.256.0",
@@ -44,6 +47,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-filepond": "^7.1.2",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
